Closed Bug 1191412 Opened 9 years ago Closed 9 years ago

Getting incoherent "will-change memory consumption is too high" warnings

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox41 --- unaffected
firefox42 + fixed
firefox43 --- fixed

People

(Reporter: etienne, Assigned: BenWa)

Details

Attachments

(1 file)

I think it happens on any app using will-change. An easy way to reproduce is to install the test app from [1]. At launch we get the following warning in the console: ``` Will-change memory consumption is too high. Surface area covers 31680 px, budget is the document surface area multiplied by 3 (201600 px). Occurences of will-change over the budget will be ignored. ``` But the surface area (31680) is actually way smaller than the budget (201600) :) At first I thought that maybe something was terribly wrong at the system app level, but removing all will-change uses from the system app yields the exact same message. [1] https://github.com/gaia-components/fast-list/tree/master/examples/simple
Timing wise this could be related to bug 1103106. Any idea?
Flags: needinfo?(bgirard)
Looks like there's a logical error that slipped through that change: http://mxr.mozilla.org/mozilla-central/source/layout/base/nsDisplayList.cpp#1233 Should warn on !onBudget instead.
Here's the new warning. Note that I no longer mention the size of a particular surface since we look at the sum only: Will-change memory consumption is too high. Budget limit is the document surface area multiplied by 3 (882015 px). Occurrences of will-change over the budget will be ignored.
Bug 1191412 - Fix logic and text for the WillChange warning. r=roc
Attachment #8645146 - Flags: review?(roc)
Comment on attachment 8645146 [details] MozReview Request: Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc https://reviewboard.mozilla.org/r/15421/#review13819 Ship It!
Attachment #8645146 - Flags: review?(roc) → review+
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/751d8abf0b7666484bbfd3397ae1e54e758d3fc9 changeset: 751d8abf0b7666484bbfd3397ae1e54e758d3fc9 user: Benoit Girard <b56girard@gmail.com> date: Fri Aug 07 16:05:19 2015 -0400 description: Bug 1191412 - Fix logic and text for the WillChange warning. r=roc
Comment on attachment 8645146 [details] MozReview Request: Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc Approval Request Comment [Feature/regressing bug #]: bug 1181976 [User impact if declined]: The error message will be printed at the wrong time confusing the user. [Describe test coverage new/current, TreeHerder]: No changes in test [Risks and why]: Very low, we're just changing the logic that's driving a warning message. [String/UUID change made/needed]: This changes the willchange warning string. If we can't make a string change we should at least fix the warning logic. But the warning is a bit confusing without the string fix.
Attachment #8645146 - Flags: approval-mozilla-aurora?
Flags: needinfo?(bgirard)
Assignee: nobody → bgirard
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Axel, Francesco, are you OK with this string change in 42? Thanks
Flags: needinfo?(l10n)
Flags: needinfo?(francesco.lodolo)
Given the audience, I would feel a lot of better if we just fix the logic, and keep the current string as it is in 42, especially considering this is a "spring" release. The string seems also the less problematic part of this issue.
Flags: needinfo?(l10n)
Flags: needinfo?(francesco.lodolo)
Comment on attachment 8645146 [details] MozReview Request: Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc
Attachment #8645146 - Attachment description: MozReview Request: Bug 1191412 - Fix logic and text for the WillChange warning. r=roc → MozReview Request: Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc
Here's a version of the patch that should be suitable to land on aurora. [Tracking Requested - why for this release]: Patch is ready for uplift and isn't risky. Otherwise the warnings are all wrong. Asking for tracking so that we don't forget to land this for this release and ship the regression.
Comment on attachment 8645146 [details] MozReview Request: Bug 1191412 - Aurora-only: Fix will-change warning logic but not the string. r=roc thanks, let's take it!
Attachment #8645146 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: