Bug 1191412 - Fix logic and text for the WillChange warning. r=roc

--HG--
extra : commitid : LL1q53ZpGCQ
extra : rebase_source : 342e0bf923ec556b7abd9f7275f7d5b20400663c